# src/main/resources/api.yml
@@ -39,6 +39,13 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Vehicle'
+        '403':
+          description: FORBIDDEN
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: 'https://raw.githubusercontent.com/jumkid/share-jar/master/src/main/resources/share.yaml#/components/schemas/CustomErrorResponse'
 
     post:
       tags: [ 'v1' ]
@@ -56,7 +63,97 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Vehicle'
+        '403':
+          description: FORBIDDEN
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: 'https://raw.githubusercontent.com/jumkid/share-jar/master/src/main/resources/share.yaml#/components/schemas/CustomErrorResponse'
 
+  '/vehicle/{vehicleId}':
+    post:
+      tags: [ 'v1' ]
+      operationId: addVehicle
+      description: add new activity for user
+      parameters:
+        - name: vehicleId
+          description: vehicle identifier
+          in: path
+          required: true
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Vehicle'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Vehicle'
+        '403':
+          description: FORBIDDEN
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: 'https://raw.githubusercontent.com/jumkid/share-jar/master/src/main/resources/share.yaml#/components/schemas/CustomErrorResponse'
+        '409':
+          description: CONFLICT
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: 'https://raw.githubusercontent.com/jumkid/share-jar/master/src/main/resources/share.yaml#/components/schemas/CustomErrorResponse'
+
+    delete:
+      tags: [ 'v1' ]
+      operationId: deleteVehicle
+      description: delete an existing vehicle for user
+      parameters:
+        - name: vehicleId
+          description: vehicle identifier
+          in: path
+          required: true
+      responses:
+        '204':
+          description: NOT_FOUND
+        '403':
+          description: FORBIDDEN
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: 'https://raw.githubusercontent.com/jumkid/share-jar/master/src/main/resources/share.yaml#/components/schemas/CustomErrorResponse'
+    
+  '/vehicle/import':
+    post:
+      tags:
+        - v1
+      operationId: import
+      description: import vehicle data
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+                tags:
+                  type: array
+                  format: string
+      responses:
+        '200':
+          description: import vehicle data in csv format
+          content:
+            application/json:
+              schema:
+                type: integer
+                
 components:
   schemas:
     Vehicle:
